添加背景图

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -77,11 +77,11 @@
      <i class="fas fa-qrcode"></i> 打赏
      <div class="reward-main">
       <ul class="reward-all">
-       <li class="reward-item"><a href="https://cdn.jsdelivr.net/gh/lete114/CDN@2.0/Use/wzf.png" target="_blank"><img class="post-qr-code-img" data-lazy-src="https://cdn.jsdelivr.net/gh/lete114/CDN@2.0/Use/wzf.png" alt="微信" /></a>
+       <li class="reward-item"><a href="#" target="_blank"><img class="post-qr-code-img" data-lazy-src="/img/vx.png" alt="微信" /></a>
         <div class="post-qr-code-desc">
          微信
         </div></li>
-       <li class="reward-item"><a href="https://cdn.jsdelivr.net/gh/lete114/CDN@2.0/Use/zfb.png" target="_blank"><img class="post-qr-code-img" data-lazy-src="https://cdn.jsdelivr.net/gh/lete114/CDN@2.0/Use/zfb.png" alt="支付宝" /></a>
+       <li class="reward-item"><a href="#" target="_blank"><img class="post-qr-code-img" data-lazy-src="/img/zfb.png" alt="支付宝" /></a>
         <div class="post-qr-code-desc">
          支付宝
         </div></li>
