--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -68,8 +68,8 @@
     </div>
     <div class="post_share">
      <div class="social-share" data-image="https://cdn.jsdelivr.net/gh/lete114/CDN@3.0/BoBoPic/12.jpg" data-sites="facebook,twitter,wechat,weibo,qq"></div>
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/social-share.js/dist/css/share.min.css" />
-     <script src="https://cdn.jsdelivr.net/npm/social-share.js/dist/js/social-share.min.js" defer=""></script>
+     <link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/social-share.js/dist/css/share.min.css" />
+     <script src="https://gcore.jsdelivr.net/npm/social-share.js/dist/js/social-share.min.js" defer=""></script>
     </div>
    </div>
    <div class="post-reward">
