--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -196,7 +196,7 @@
                     })
                 }
 
-                $.getScript('https://cdn.jsdelivr.net/npm/typed.js/lib/typed.min.js', subtitleType)
+                $.getScript('https://gcore.jsdelivr.net/npm/typed.js/lib/typed.min.js', subtitleType)
             }
             var now = new Date();
             function createtime() {
